--- a/app/src/main/res/layout/activity_home__screen.xml
+++ b/app/src/main/res/layout/activity_home__screen.xml
@@ -20,7 +20,7 @@
             android:id="@+id/toolbar"
             android:layout_width="410dp"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             tools:layout_conversion_absoluteHeight="56dp"
             tools:layout_conversion_absoluteWidth="411dp"
